error fixed and animations made faster

--- a/app/src/main/res/layout/activity_easy_game.xml
+++ b/app/src/main/res/layout/activity_easy_game.xml
@@ -58,7 +58,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/Transparent"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/circlee1"
         app:layout_constraintEnd_toEndOf="@+id/circlee1"
         app:layout_constraintStart_toStartOf="@+id/circlee1"
@@ -69,7 +69,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/Transparent"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/circlee2"
         app:layout_constraintEnd_toEndOf="@+id/circlee2"
         app:layout_constraintStart_toStartOf="@+id/circlee2"
@@ -79,11 +79,12 @@
         android:id="@+id/easybtn3"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@color/Transparent"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/circlee3"
         app:layout_constraintEnd_toEndOf="@+id/circlee3"
         app:layout_constraintStart_toStartOf="@+id/circlee3"
@@ -160,14 +161,15 @@
         android:id="@+id/easyScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="36dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
         android:layout_marginTop="28dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:text="Score: 0"
         android:textColor="@color/black"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/easyLives"
         app:layout_constraintHorizontal_bias="0.225"
         app:layout_constraintStart_toStartOf="parent"
@@ -182,6 +184,7 @@
         android:text="Lives: 3"
         android:textColor="@color/black"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/easyScore"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/easyScore"
