--- a/app/src/main/res/layout/activity_hard_game.xml
+++ b/app/src/main/res/layout/activity_hard_game.xml
@@ -57,7 +57,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/Transparent"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/circleh1"
         app:layout_constraintEnd_toEndOf="@+id/circleh1"
         app:layout_constraintStart_toStartOf="@+id/circleh1"
@@ -68,7 +68,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/Transparent"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/circleh2"
         app:layout_constraintEnd_toEndOf="@+id/circleh2"
         app:layout_constraintStart_toStartOf="@+id/circleh2"
@@ -78,11 +78,12 @@
         android:id="@+id/hardbtn3"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@color/Transparent"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/circleh3"
         app:layout_constraintEnd_toEndOf="@+id/circleh3"
         app:layout_constraintStart_toStartOf="@+id/circleh3"
@@ -159,14 +160,15 @@
         android:id="@+id/hardScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="36dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
         android:layout_marginTop="28dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:text="Score: 0"
         android:textColor="@color/black"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/hardLives"
         app:layout_constraintHorizontal_bias="0.225"
         app:layout_constraintStart_toStartOf="parent"
@@ -181,6 +183,7 @@
         android:text="Lives: 3"
         android:textColor="@color/black"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/hardScore"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/hardScore"
