--- a/app/src/main/res/layout/activity_easy_game.xml
+++ b/app/src/main/res/layout/activity_easy_game.xml
@@ -94,11 +94,12 @@
         android:id="@+id/easyans1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="160dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:gravity="center"
         android:textColor="@color/black"
         android:textSize="30sp"
         android:visibility="invisible"
@@ -111,11 +112,12 @@
         android:id="@+id/easyans2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="160dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:gravity="center"
         android:textColor="@color/black"
         android:textSize="30sp"
         android:visibility="invisible"
@@ -128,11 +130,12 @@
         android:id="@+id/easyans3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="160dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:gravity="center"
         android:textColor="@color/black"
         android:textSize="30sp"
         android:visibility="invisible"
