--- a/app/src/main/res/layout/activity_hard_game.xml
+++ b/app/src/main/res/layout/activity_hard_game.xml
@@ -93,11 +93,12 @@
         android:id="@+id/hardans1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="160dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:gravity="center"
         android:textColor="@color/black"
         android:textSize="30sp"
         android:visibility="invisible"
@@ -110,11 +111,12 @@
         android:id="@+id/hardans2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="160dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:gravity="center"
         android:textColor="@color/black"
         android:textSize="30sp"
         android:visibility="invisible"
@@ -127,11 +129,12 @@
         android:id="@+id/hardans3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="160dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:gravity="center"
         android:textColor="@color/black"
         android:textSize="30sp"
         android:visibility="invisible"
