--- a/app/src/main/res/layout/activity_medium_game.xml
+++ b/app/src/main/res/layout/activity_medium_game.xml
@@ -99,6 +99,7 @@
         android:layout_marginTop="160dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:gravity="center"
         android:textColor="@color/black"
         android:textSize="30sp"
         android:visibility="invisible"
@@ -116,6 +117,7 @@
         android:layout_marginTop="160dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:gravity="center"
         android:textColor="@color/black"
         android:textSize="30sp"
         android:visibility="invisible"
@@ -133,6 +135,7 @@
         android:layout_marginTop="160dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:gravity="center"
         android:textColor="@color/black"
         android:textSize="30sp"
         android:visibility="invisible"
