--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,12 @@
         android:id="@+id/easybtn"
         android:layout_width="219dp"
         android:layout_height="61dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginBottom="68dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="56dp"
-        android:background="#FFFFFF"
+        android:layout_marginStart="8dp"
+        android:background="@drawable/roundbutton"
         android:text="Easy"
         app:layout_constraintBottom_toTopOf="@+id/mediumbtn"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,7 +27,7 @@
         android:layout_width="0dp"
         android:layout_height="61dp"
         android:layout_marginBottom="68dp"
-        android:background="#FFFFFF"
+        android:background="@drawable/roundbutton"
         android:text="Medium"
         app:layout_constraintBottom_toTopOf="@+id/hardbtn"
         app:layout_constraintEnd_toEndOf="@+id/easybtn"
@@ -39,10 +39,31 @@
         android:layout_width="0dp"
         android:layout_height="61dp"
         android:layout_marginBottom="64dp"
-        android:background="#FFFFFF"
+        android:background="@drawable/roundbutton"
         android:text="Hard"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/easybtn"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/easybtn" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="30dp"
+        android:text="ReactMath"
+        android:textAllCaps="false"
+        android:textColor="@color/black"
+        android:textSize="60sp"
+        android:textStyle="bold"
+        app:fontFamily="casual"
+        app:layout_constraintBottom_toTopOf="@+id/easybtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
