deleted restart and added directions

--- a/app/src/main/res/layout/activity_hard_game.xml
+++ b/app/src/main/res/layout/activity_hard_game.xml
@@ -193,7 +193,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/hardrestart"
+        android:id="@+id/hardmenu"
         android:layout_width="294dp"
         android:layout_height="90dp"
         android:layout_marginEnd="8dp"
@@ -202,7 +202,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/circle"
-        android:text="Restart"
+        android:text="Main Menu"
         android:textColor="@color/black"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -215,6 +215,10 @@
         android:id="@+id/hardend"
         android:layout_width="0dp"
         android:layout_height="29dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:gravity="center"
         android:text="Score: "
@@ -222,9 +226,8 @@
         android:textSize="20sp"
         android:textStyle="bold"
         android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="@+id/hardrestart"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/hardrestart"
+        app:layout_constraintEnd_toEndOf="@+id/hardmenu"
+        app:layout_constraintStart_toStartOf="@+id/hardmenu"
         app:layout_constraintTop_toBottomOf="@+id/hardgo" />
 
     <TextView
@@ -241,21 +244,6 @@
         app:layout_constraintEnd_toEndOf="@+id/hardend"
         app:layout_constraintStart_toStartOf="@+id/hardend"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/hardmenu"
-        android:layout_width="0dp"
-        android:layout_height="90dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/circle"
-        android:text="Main Menu"
-        android:textColor="@color/black"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="@+id/hardrestart"
-        app:layout_constraintStart_toStartOf="@+id/hardrestart"
-        app:layout_constraintTop_toBottomOf="@+id/hardrestart" />
 
     <TextView
         android:id="@+id/hardwrong"
@@ -320,6 +308,28 @@
         app:layout_constraintStart_toStartOf="@+id/circleh3"
         app:layout_constraintTop_toTopOf="@+id/circleh3"
         app:srcCompat="@drawable/correct" />
+
+    <TextView
+        android:id="@+id/directionh"
+        android:layout_width="322dp"
+        android:layout_height="138dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/harddirections"
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="Press the correct answer when it is in the bubble!"
+        android:textColor="@color/black"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
