--- a/app/src/main/res/drawable/easydirections.xml
+++ b/app/src/main/res/drawable/easydirections.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/background"/>
-    <stroke android:width="20px" android:color="#ff000000"/>
+    <solid android:color="@color/white"/>
+    <stroke android:width="20px" android:color="#ffff0000"/>
     <corners android:bottomRightRadius="8dp"
         android:bottomLeftRadius="8dp"
         android:topRightRadius="8dp"
