--- a/app/src/main/res/layout/activity_easy_game.xml
+++ b/app/src/main/res/layout/activity_easy_game.xml
@@ -194,7 +194,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/easyrestart"
+        android:id="@+id/easymenu"
         android:layout_width="294dp"
         android:layout_height="90dp"
         android:layout_marginEnd="8dp"
@@ -203,7 +203,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/circle"
-        android:text="Restart"
+        android:text="Main Menu"
         android:textColor="@color/black"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -223,9 +223,9 @@
         android:textSize="20sp"
         android:textStyle="bold"
         android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="@+id/easyrestart"
+        app:layout_constraintEnd_toEndOf="@+id/easymenu"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/easyrestart"
+        app:layout_constraintStart_toStartOf="@+id/easymenu"
         app:layout_constraintTop_toBottomOf="@+id/easygo" />
 
     <TextView
@@ -243,20 +243,20 @@
         app:layout_constraintStart_toStartOf="@+id/easyend"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/easymenu"
-        android:layout_width="0dp"
-        android:layout_height="90dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/circle"
-        android:text="Main Menu"
-        android:textColor="@color/black"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="@+id/easyrestart"
-        app:layout_constraintStart_toStartOf="@+id/easyrestart"
-        app:layout_constraintTop_toBottomOf="@+id/easyrestart" />
+    <!--<Button-->
+        <!--android:id="@+id/easymen"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="90dp"-->
+        <!--android:layout_marginTop="8dp"-->
+        <!--android:background="@drawable/circle"-->
+        <!--android:text="Main Menu"-->
+        <!--android:textColor="@color/black"-->
+        <!--android:textSize="30sp"-->
+        <!--android:textStyle="bold"-->
+        <!--android:visibility="invisible"-->
+        <!--app:layout_constraintEnd_toEndOf="@+id/easyrestart"-->
+        <!--app:layout_constraintStart_toStartOf="@+id/easyrestart"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/easyrestart" />-->
 
     <TextView
         android:id="@+id/easywrong"
@@ -321,6 +321,28 @@
         app:layout_constraintStart_toStartOf="@+id/circlee3"
         app:layout_constraintTop_toTopOf="@+id/circlee3"
         app:srcCompat="@drawable/correct" />
+
+    <TextView
+        android:id="@+id/directione"
+        android:layout_width="322dp"
+        android:layout_height="134dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/easydirections"
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="Press the correct answer when it is in the bubble!"
+        android:textColor="@color/black"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
