--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="black">#000000</color>
     <color name="background">#4BE78B</color>
     <color name="Transparent">#00000000</color>
+    <color name="white">#FFFFFF</color>
 </resources>
